parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> instructions_or_empty
Rule 2     instructions_or_empty -> <empty>
Rule 3     instructions_or_empty -> instructions
Rule 4     instructions -> instruction
Rule 5     instructions -> instructions instruction
Rule 6     instruction -> { instructions }
Rule 7     instruction -> print_i ;
Rule 8     instruction -> assign ;
Rule 9     instruction -> while_l
Rule 10    instruction -> for_l
Rule 11    instruction -> CONTINUE ;
Rule 12    instruction -> BREAK ;
Rule 13    instruction -> return_i ;
Rule 14    instruction -> if_i
Rule 15    expr -> mat_fun ( expr )
Rule 16    expr -> matrix
Rule 17    expr -> expr '
Rule 18    expr -> NOT expr  [precedence=right, level=7]
Rule 19    expr -> - expr  [precedence=right, level=7]
Rule 20    expr -> expr OR expr  [precedence=left, level=4]
Rule 21    expr -> expr AND expr  [precedence=left, level=4]
Rule 22    expr -> expr XOR expr  [precedence=left, level=4]
Rule 23    expr -> expr DOTSUB expr  [precedence=left, level=5]
Rule 24    expr -> expr DOTADD expr  [precedence=left, level=5]
Rule 25    expr -> expr DOTDIV expr  [precedence=left, level=6]
Rule 26    expr -> expr DOTMUL expr  [precedence=left, level=6]
Rule 27    expr -> expr LESSEREQUAL expr  [precedence=nonassoc, level=3]
Rule 28    expr -> expr GREATEREQUAL expr  [precedence=nonassoc, level=3]
Rule 29    expr -> expr LESSER expr  [precedence=nonassoc, level=3]
Rule 30    expr -> expr GREATER expr  [precedence=nonassoc, level=3]
Rule 31    expr -> expr NOTEQUAL expr  [precedence=nonassoc, level=3]
Rule 32    expr -> expr EQUAL expr  [precedence=nonassoc, level=3]
Rule 33    expr -> expr / expr  [precedence=left, level=6]
Rule 34    expr -> expr * expr  [precedence=left, level=6]
Rule 35    expr -> expr - expr  [precedence=left, level=5]
Rule 36    expr -> expr + expr  [precedence=left, level=5]
Rule 37    expr -> STRING
Rule 38    expr -> FLOATNUM
Rule 39    expr -> INTNUM
Rule 40    expr -> ( expr )
Rule 41    expr -> var
Rule 42    var -> matel
Rule 43    var -> ID
Rule 44    matel -> ID [ expr , expr ]
Rule 45    assign -> var DIVASSIGN expr
Rule 46    assign -> var MULASSIGN expr
Rule 47    assign -> var SUBASSIGN expr
Rule 48    assign -> var ADDASSIGN expr
Rule 49    assign -> var = expr
Rule 50    matrix -> [ vectors ]
Rule 51    vectors -> vector
Rule 52    vectors -> vectors , vector
Rule 53    vector -> ID [ expr : ]
Rule 54    vector -> ID [ : expr ]
Rule 55    vector -> ID [ expr : expr ]
Rule 56    vector -> ID [ expr ]
Rule 57    vector -> [ variables ]
Rule 58    variables -> variable
Rule 59    variables -> variables , variable
Rule 60    variable -> expr
Rule 61    mat_fun -> ONES
Rule 62    mat_fun -> EYE
Rule 63    mat_fun -> ZEROS
Rule 64    if_i -> IF ( expr ) instruction ELSE instruction  [precedence=right, level=2]
Rule 65    if_i -> IF ( expr ) instruction  [precedence=right, level=1]
Rule 66    while_l -> WHILE ( expr ) instruction
Rule 67    for_l -> FOR ID = expr : expr instruction
Rule 68    return_i -> RETURN expr
Rule 69    return_i -> RETURN
Rule 70    print_i -> PRINT printargs
Rule 71    printargs -> expr
Rule 72    printargs -> expr , printargs

Terminals, with rules where they appear:

'                    : 17
(                    : 15 40 64 65 66
)                    : 15 40 64 65 66
*                    : 34
+                    : 36
,                    : 44 52 59 72
-                    : 19 35
/                    : 33
:                    : 53 54 55 67
;                    : 7 8 11 12 13
=                    : 49 67
ADDASSIGN            : 48
AND                  : 21
BREAK                : 12
CONTINUE             : 11
DIVASSIGN            : 45
DOTADD               : 24
DOTDIV               : 25
DOTMUL               : 26
DOTSUB               : 23
ELSE                 : 64
EQUAL                : 32
EYE                  : 62
FLOATNUM             : 38
FOR                  : 67
GREATER              : 30
GREATEREQUAL         : 28
ID                   : 43 44 53 54 55 56 67
IF                   : 64 65
INTNUM               : 39
LESSER               : 29
LESSEREQUAL          : 27
MULASSIGN            : 46
NOT                  : 18
NOTEQUAL             : 31
ONES                 : 61
OR                   : 20
PRINT                : 70
RETURN               : 68 69
STRING               : 37
SUBASSIGN            : 47
WHILE                : 66
XOR                  : 22
ZEROS                : 63
[                    : 44 50 53 54 55 56 57
]                    : 44 50 53 54 55 56 57
error                : 
{                    : 6
}                    : 6

Nonterminals, with rules where they appear:

assign               : 8
expr                 : 15 17 18 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 40 44 44 45 46 47 48 49 53 54 55 55 56 60 64 65 66 67 67 68 71 72
for_l                : 10
if_i                 : 14
instruction          : 4 5 64 64 65 66 67
instructions         : 3 5 6
instructions_or_empty : 1
mat_fun              : 15
matel                : 42
matrix               : 16
print_i              : 7
printargs            : 70 72
program              : 0
return_i             : 13
var                  : 41 45 46 47 48 49
variable             : 58 59
variables            : 57 59
vector               : 51 52
vectors              : 50 52
while_l              : 9


state 0

    (0) S' -> . program
    (1) program -> . instructions_or_empty
    (2) instructions_or_empty -> .
    (3) instructions_or_empty -> . instructions
    (4) instructions -> . instruction
    (5) instructions -> . instructions instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . print_i ;
    (8) instruction -> . assign ;
    (9) instruction -> . while_l
    (10) instruction -> . for_l
    (11) instruction -> . CONTINUE ;
    (12) instruction -> . BREAK ;
    (13) instruction -> . return_i ;
    (14) instruction -> . if_i
    (70) print_i -> . PRINT printargs
    (45) assign -> . var DIVASSIGN expr
    (46) assign -> . var MULASSIGN expr
    (47) assign -> . var SUBASSIGN expr
    (48) assign -> . var ADDASSIGN expr
    (49) assign -> . var = expr
    (66) while_l -> . WHILE ( expr ) instruction
    (67) for_l -> . FOR ID = expr : expr instruction
    (68) return_i -> . RETURN expr
    (69) return_i -> . RETURN
    (64) if_i -> . IF ( expr ) instruction ELSE instruction
    (65) if_i -> . IF ( expr ) instruction
    (42) var -> . matel
    (43) var -> . ID
    (44) matel -> . ID [ expr , expr ]
    $end            reduce using rule 2 (instructions_or_empty -> .)
    {               shift and go to state 5
    CONTINUE        shift and go to state 10
    BREAK           shift and go to state 11
    PRINT           shift and go to state 14
    WHILE           shift and go to state 16
    FOR             shift and go to state 17
    RETURN          shift and go to state 19
    IF              shift and go to state 20
    ID              shift and go to state 18

    program                        shift and go to state 1
    instructions_or_empty          shift and go to state 2
    instructions                   shift and go to state 3
    instruction                    shift and go to state 4
    print_i                        shift and go to state 6
    assign                         shift and go to state 7
    while_l                        shift and go to state 8
    for_l                          shift and go to state 9
    return_i                       shift and go to state 12
    if_i                           shift and go to state 13
    var                            shift and go to state 15
    matel                          shift and go to state 21

state 1

    (0) S' -> program .


state 2

    (1) program -> instructions_or_empty .
    $end            reduce using rule 1 (program -> instructions_or_empty .)


state 3

    (3) instructions_or_empty -> instructions .
    (5) instructions -> instructions . instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . print_i ;
    (8) instruction -> . assign ;
    (9) instruction -> . while_l
    (10) instruction -> . for_l
    (11) instruction -> . CONTINUE ;
    (12) instruction -> . BREAK ;
    (13) instruction -> . return_i ;
    (14) instruction -> . if_i
    (70) print_i -> . PRINT printargs
    (45) assign -> . var DIVASSIGN expr
    (46) assign -> . var MULASSIGN expr
    (47) assign -> . var SUBASSIGN expr
    (48) assign -> . var ADDASSIGN expr
    (49) assign -> . var = expr
    (66) while_l -> . WHILE ( expr ) instruction
    (67) for_l -> . FOR ID = expr : expr instruction
    (68) return_i -> . RETURN expr
    (69) return_i -> . RETURN
    (64) if_i -> . IF ( expr ) instruction ELSE instruction
    (65) if_i -> . IF ( expr ) instruction
    (42) var -> . matel
    (43) var -> . ID
    (44) matel -> . ID [ expr , expr ]
    $end            reduce using rule 3 (instructions_or_empty -> instructions .)
    {               shift and go to state 5
    CONTINUE        shift and go to state 10
    BREAK           shift and go to state 11
    PRINT           shift and go to state 14
    WHILE           shift and go to state 16
    FOR             shift and go to state 17
    RETURN          shift and go to state 19
    IF              shift and go to state 20
    ID              shift and go to state 18

    instruction                    shift and go to state 22
    print_i                        shift and go to state 6
    assign                         shift and go to state 7
    while_l                        shift and go to state 8
    for_l                          shift and go to state 9
    return_i                       shift and go to state 12
    if_i                           shift and go to state 13
    var                            shift and go to state 15
    matel                          shift and go to state 21

state 4

    (4) instructions -> instruction .
    {               reduce using rule 4 (instructions -> instruction .)
    CONTINUE        reduce using rule 4 (instructions -> instruction .)
    BREAK           reduce using rule 4 (instructions -> instruction .)
    PRINT           reduce using rule 4 (instructions -> instruction .)
    WHILE           reduce using rule 4 (instructions -> instruction .)
    FOR             reduce using rule 4 (instructions -> instruction .)
    RETURN          reduce using rule 4 (instructions -> instruction .)
    IF              reduce using rule 4 (instructions -> instruction .)
    ID              reduce using rule 4 (instructions -> instruction .)
    $end            reduce using rule 4 (instructions -> instruction .)
    }               reduce using rule 4 (instructions -> instruction .)


state 5

    (6) instruction -> { . instructions }
    (4) instructions -> . instruction
    (5) instructions -> . instructions instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . print_i ;
    (8) instruction -> . assign ;
    (9) instruction -> . while_l
    (10) instruction -> . for_l
    (11) instruction -> . CONTINUE ;
    (12) instruction -> . BREAK ;
    (13) instruction -> . return_i ;
    (14) instruction -> . if_i
    (70) print_i -> . PRINT printargs
    (45) assign -> . var DIVASSIGN expr
    (46) assign -> . var MULASSIGN expr
    (47) assign -> . var SUBASSIGN expr
    (48) assign -> . var ADDASSIGN expr
    (49) assign -> . var = expr
    (66) while_l -> . WHILE ( expr ) instruction
    (67) for_l -> . FOR ID = expr : expr instruction
    (68) return_i -> . RETURN expr
    (69) return_i -> . RETURN
    (64) if_i -> . IF ( expr ) instruction ELSE instruction
    (65) if_i -> . IF ( expr ) instruction
    (42) var -> . matel
    (43) var -> . ID
    (44) matel -> . ID [ expr , expr ]
    {               shift and go to state 5
    CONTINUE        shift and go to state 10
    BREAK           shift and go to state 11
    PRINT           shift and go to state 14
    WHILE           shift and go to state 16
    FOR             shift and go to state 17
    RETURN          shift and go to state 19
    IF              shift and go to state 20
    ID              shift and go to state 18

    instructions                   shift and go to state 23
    instruction                    shift and go to state 4
    print_i                        shift and go to state 6
    assign                         shift and go to state 7
    while_l                        shift and go to state 8
    for_l                          shift and go to state 9
    return_i                       shift and go to state 12
    if_i                           shift and go to state 13
    var                            shift and go to state 15
    matel                          shift and go to state 21

state 6

    (7) instruction -> print_i . ;
    ;               shift and go to state 24


state 7

    (8) instruction -> assign . ;
    ;               shift and go to state 25


state 8

    (9) instruction -> while_l .
    {               reduce using rule 9 (instruction -> while_l .)
    CONTINUE        reduce using rule 9 (instruction -> while_l .)
    BREAK           reduce using rule 9 (instruction -> while_l .)
    PRINT           reduce using rule 9 (instruction -> while_l .)
    WHILE           reduce using rule 9 (instruction -> while_l .)
    FOR             reduce using rule 9 (instruction -> while_l .)
    RETURN          reduce using rule 9 (instruction -> while_l .)
    IF              reduce using rule 9 (instruction -> while_l .)
    ID              reduce using rule 9 (instruction -> while_l .)
    $end            reduce using rule 9 (instruction -> while_l .)
    }               reduce using rule 9 (instruction -> while_l .)
    ELSE            reduce using rule 9 (instruction -> while_l .)


state 9

    (10) instruction -> for_l .
    {               reduce using rule 10 (instruction -> for_l .)
    CONTINUE        reduce using rule 10 (instruction -> for_l .)
    BREAK           reduce using rule 10 (instruction -> for_l .)
    PRINT           reduce using rule 10 (instruction -> for_l .)
    WHILE           reduce using rule 10 (instruction -> for_l .)
    FOR             reduce using rule 10 (instruction -> for_l .)
    RETURN          reduce using rule 10 (instruction -> for_l .)
    IF              reduce using rule 10 (instruction -> for_l .)
    ID              reduce using rule 10 (instruction -> for_l .)
    $end            reduce using rule 10 (instruction -> for_l .)
    }               reduce using rule 10 (instruction -> for_l .)
    ELSE            reduce using rule 10 (instruction -> for_l .)


state 10

    (11) instruction -> CONTINUE . ;
    ;               shift and go to state 26


state 11

    (12) instruction -> BREAK . ;
    ;               shift and go to state 27


state 12

    (13) instruction -> return_i . ;
    ;               shift and go to state 28


state 13

    (14) instruction -> if_i .
    {               reduce using rule 14 (instruction -> if_i .)
    CONTINUE        reduce using rule 14 (instruction -> if_i .)
    BREAK           reduce using rule 14 (instruction -> if_i .)
    PRINT           reduce using rule 14 (instruction -> if_i .)
    WHILE           reduce using rule 14 (instruction -> if_i .)
    FOR             reduce using rule 14 (instruction -> if_i .)
    RETURN          reduce using rule 14 (instruction -> if_i .)
    IF              reduce using rule 14 (instruction -> if_i .)
    ID              reduce using rule 14 (instruction -> if_i .)
    $end            reduce using rule 14 (instruction -> if_i .)
    }               reduce using rule 14 (instruction -> if_i .)
    ELSE            reduce using rule 14 (instruction -> if_i .)


state 14

    (70) print_i -> PRINT . printargs
    (71) printargs -> . expr
    (72) printargs -> . expr , printargs
    (15) expr -> . mat_fun ( expr )
    (16) expr -> . matrix
    (17) expr -> . expr '
    (18) expr -> . NOT expr
    (19) expr -> . - expr
    (20) expr -> . expr OR expr
    (21) expr -> . expr AND expr
    (22) expr -> . expr XOR expr
    (23) expr -> . expr DOTSUB expr
    (24) expr -> . expr DOTADD expr
    (25) expr -> . expr DOTDIV expr
    (26) expr -> . expr DOTMUL expr
    (27) expr -> . expr LESSEREQUAL expr
    (28) expr -> . expr GREATEREQUAL expr
    (29) expr -> . expr LESSER expr
    (30) expr -> . expr GREATER expr
    (31) expr -> . expr NOTEQUAL expr
    (32) expr -> . expr EQUAL expr
    (33) expr -> . expr / expr
    (34) expr -> . expr * expr
    (35) expr -> . expr - expr
    (36) expr -> . expr + expr
    (37) expr -> . STRING
    (38) expr -> . FLOATNUM
    (39) expr -> . INTNUM
    (40) expr -> . ( expr )
    (41) expr -> . var
    (61) mat_fun -> . ONES
    (62) mat_fun -> . EYE
    (63) mat_fun -> . ZEROS
    (50) matrix -> . [ vectors ]
    (42) var -> . matel
    (43) var -> . ID
    (44) matel -> . ID [ expr , expr ]
    NOT             shift and go to state 34
    -               shift and go to state 35
    STRING          shift and go to state 36
    FLOATNUM        shift and go to state 37
    INTNUM          shift and go to state 38
    (               shift and go to state 32
    ONES            shift and go to state 40
    EYE             shift and go to state 41
    ZEROS           shift and go to state 42
    [               shift and go to state 43
    ID              shift and go to state 18

    printargs                      shift and go to state 29
    expr                           shift and go to state 30
    mat_fun                        shift and go to state 31
    matrix                         shift and go to state 33
    var                            shift and go to state 39
    matel                          shift and go to state 21

state 15

    (45) assign -> var . DIVASSIGN expr
    (46) assign -> var . MULASSIGN expr
    (47) assign -> var . SUBASSIGN expr
    (48) assign -> var . ADDASSIGN expr
    (49) assign -> var . = expr
    DIVASSIGN       shift and go to state 44
    MULASSIGN       shift and go to state 45
    SUBASSIGN       shift and go to state 46
    ADDASSIGN       shift and go to state 47
    =               shift and go to state 48


state 16

    (66) while_l -> WHILE . ( expr ) instruction
    (               shift and go to state 49


state 17

    (67) for_l -> FOR . ID = expr : expr instruction
    ID              shift and go to state 50


state 18

    (43) var -> ID .
    (44) matel -> ID . [ expr , expr ]
    DIVASSIGN       reduce using rule 43 (var -> ID .)
    MULASSIGN       reduce using rule 43 (var -> ID .)
    SUBASSIGN       reduce using rule 43 (var -> ID .)
    ADDASSIGN       reduce using rule 43 (var -> ID .)
    =               reduce using rule 43 (var -> ID .)
    ,               reduce using rule 43 (var -> ID .)
    '               reduce using rule 43 (var -> ID .)
    OR              reduce using rule 43 (var -> ID .)
    AND             reduce using rule 43 (var -> ID .)
    XOR             reduce using rule 43 (var -> ID .)
    DOTSUB          reduce using rule 43 (var -> ID .)
    DOTADD          reduce using rule 43 (var -> ID .)
    DOTDIV          reduce using rule 43 (var -> ID .)
    DOTMUL          reduce using rule 43 (var -> ID .)
    LESSEREQUAL     reduce using rule 43 (var -> ID .)
    GREATEREQUAL    reduce using rule 43 (var -> ID .)
    LESSER          reduce using rule 43 (var -> ID .)
    GREATER         reduce using rule 43 (var -> ID .)
    NOTEQUAL        reduce using rule 43 (var -> ID .)
    EQUAL           reduce using rule 43 (var -> ID .)
    /               reduce using rule 43 (var -> ID .)
    *               reduce using rule 43 (var -> ID .)
    -               reduce using rule 43 (var -> ID .)
    +               reduce using rule 43 (var -> ID .)
    ;               reduce using rule 43 (var -> ID .)
    )               reduce using rule 43 (var -> ID .)
    ]               reduce using rule 43 (var -> ID .)
    :               reduce using rule 43 (var -> ID .)
    {               reduce using rule 43 (var -> ID .)
    CONTINUE        reduce using rule 43 (var -> ID .)
    BREAK           reduce using rule 43 (var -> ID .)
    PRINT           reduce using rule 43 (var -> ID .)
    WHILE           reduce using rule 43 (var -> ID .)
    FOR             reduce using rule 43 (var -> ID .)
    RETURN          reduce using rule 43 (var -> ID .)
    IF              reduce using rule 43 (var -> ID .)
    ID              reduce using rule 43 (var -> ID .)
    [               shift and go to state 51


state 19

    (68) return_i -> RETURN . expr
    (69) return_i -> RETURN .
    (15) expr -> . mat_fun ( expr )
    (16) expr -> . matrix
    (17) expr -> . expr '
    (18) expr -> . NOT expr
    (19) expr -> . - expr
    (20) expr -> . expr OR expr
    (21) expr -> . expr AND expr
    (22) expr -> . expr XOR expr
    (23) expr -> . expr DOTSUB expr
    (24) expr -> . expr DOTADD expr
    (25) expr -> . expr DOTDIV expr
    (26) expr -> . expr DOTMUL expr
    (27) expr -> . expr LESSEREQUAL expr
    (28) expr -> . expr GREATEREQUAL expr
    (29) expr -> . expr LESSER expr
    (30) expr -> . expr GREATER expr
    (31) expr -> . expr NOTEQUAL expr
    (32) expr -> . expr EQUAL expr
    (33) expr -> . expr / expr
    (34) expr -> . expr * expr
    (35) expr -> . expr - expr
    (36) expr -> . expr + expr
    (37) expr -> . STRING
    (38) expr -> . FLOATNUM
    (39) expr -> . INTNUM
    (40) expr -> . ( expr )
    (41) expr -> . var
    (61) mat_fun -> . ONES
    (62) mat_fun -> . EYE
    (63) mat_fun -> . ZEROS
    (50) matrix -> . [ vectors ]
    (42) var -> . matel
    (43) var -> . ID
    (44) matel -> . ID [ expr , expr ]
    ;               reduce using rule 69 (return_i -> RETURN .)
    NOT             shift and go to state 34
    -               shift and go to state 35
    STRING          shift and go to state 36
    FLOATNUM        shift and go to state 37
    INTNUM          shift and go to state 38
    (               shift and go to state 32
    ONES            shift and go to state 40
    EYE             shift and go to state 41
    ZEROS           shift and go to state 42
    [               shift and go to state 43
    ID              shift and go to state 18

    expr                           shift and go to state 52
    mat_fun                        shift and go to state 31
    matrix                         shift and go to state 33
    var                            shift and go to state 39
    matel                          shift and go to state 21

state 20

    (64) if_i -> IF . ( expr ) instruction ELSE instruction
    (65) if_i -> IF . ( expr ) instruction
    (               shift and go to state 53


state 21

    (42) var -> matel .
    DIVASSIGN       reduce using rule 42 (var -> matel .)
    MULASSIGN       reduce using rule 42 (var -> matel .)
    SUBASSIGN       reduce using rule 42 (var -> matel .)
    ADDASSIGN       reduce using rule 42 (var -> matel .)
    =               reduce using rule 42 (var -> matel .)
    ,               reduce using rule 42 (var -> matel .)
    '               reduce using rule 42 (var -> matel .)
    OR              reduce using rule 42 (var -> matel .)
    AND             reduce using rule 42 (var -> matel .)
    XOR             reduce using rule 42 (var -> matel .)
    DOTSUB          reduce using rule 42 (var -> matel .)
    DOTADD          reduce using rule 42 (var -> matel .)
    DOTDIV          reduce using rule 42 (var -> matel .)
    DOTMUL          reduce using rule 42 (var -> matel .)
    LESSEREQUAL     reduce using rule 42 (var -> matel .)
    GREATEREQUAL    reduce using rule 42 (var -> matel .)
    LESSER          reduce using rule 42 (var -> matel .)
    GREATER         reduce using rule 42 (var -> matel .)
    NOTEQUAL        reduce using rule 42 (var -> matel .)
    EQUAL           reduce using rule 42 (var -> matel .)
    /               reduce using rule 42 (var -> matel .)
    *               reduce using rule 42 (var -> matel .)
    -               reduce using rule 42 (var -> matel .)
    +               reduce using rule 42 (var -> matel .)
    ;               reduce using rule 42 (var -> matel .)
    )               reduce using rule 42 (var -> matel .)
    ]               reduce using rule 42 (var -> matel .)
    :               reduce using rule 42 (var -> matel .)
    {               reduce using rule 42 (var -> matel .)
    CONTINUE        reduce using rule 42 (var -> matel .)
    BREAK           reduce using rule 42 (var -> matel .)
    PRINT           reduce using rule 42 (var -> matel .)
    WHILE           reduce using rule 42 (var -> matel .)
    FOR             reduce using rule 42 (var -> matel .)
    RETURN          reduce using rule 42 (var -> matel .)
    IF              reduce using rule 42 (var -> matel .)
    ID              reduce using rule 42 (var -> matel .)


state 22

    (5) instructions -> instructions instruction .
    {               reduce using rule 5 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 5 (instructions -> instructions instruction .)
    BREAK           reduce using rule 5 (instructions -> instructions instruction .)
    PRINT           reduce using rule 5 (instructions -> instructions instruction .)
    WHILE           reduce using rule 5 (instructions -> instructions instruction .)
    FOR             reduce using rule 5 (instructions -> instructions instruction .)
    RETURN          reduce using rule 5 (instructions -> instructions instruction .)
    IF              reduce using rule 5 (instructions -> instructions instruction .)
    ID              reduce using rule 5 (instructions -> instructions instruction .)
    $end            reduce using rule 5 (instructions -> instructions instruction .)
    }               reduce using rule 5 (instructions -> instructions instruction .)


state 23

    (6) instruction -> { instructions . }
    (5) instructions -> instructions . instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . print_i ;
    (8) instruction -> . assign ;
    (9) instruction -> . while_l
    (10) instruction -> . for_l
    (11) instruction -> . CONTINUE ;
    (12) instruction -> . BREAK ;
    (13) instruction -> . return_i ;
    (14) instruction -> . if_i
    (70) print_i -> . PRINT printargs
    (45) assign -> . var DIVASSIGN expr
    (46) assign -> . var MULASSIGN expr
    (47) assign -> . var SUBASSIGN expr
    (48) assign -> . var ADDASSIGN expr
    (49) assign -> . var = expr
    (66) while_l -> . WHILE ( expr ) instruction
    (67) for_l -> . FOR ID = expr : expr instruction
    (68) return_i -> . RETURN expr
    (69) return_i -> . RETURN
    (64) if_i -> . IF ( expr ) instruction ELSE instruction
    (65) if_i -> . IF ( expr ) instruction
    (42) var -> . matel
    (43) var -> . ID
    (44) matel -> . ID [ expr , expr ]
    }               shift and go to state 54
    {               shift and go to state 5
    CONTINUE        shift and go to state 10
    BREAK           shift and go to state 11
    PRINT           shift and go to state 14
    WHILE           shift and go to state 16
    FOR             shift and go to state 17
    RETURN          shift and go to state 19
    IF              shift and go to state 20
    ID              shift and go to state 18

    instruction                    shift and go to state 22
    print_i                        shift and go to state 6
    assign                         shift and go to state 7
    while_l                        shift and go to state 8
    for_l                          shift and go to state 9
    return_i                       shift and go to state 12
    if_i                           shift and go to state 13
    var                            shift and go to state 15
    matel                          shift and go to state 21

state 24

    (7) instruction -> print_i ; .
    {               reduce using rule 7 (instruction -> print_i ; .)
    CONTINUE        reduce using rule 7 (instruction -> print_i ; .)
    BREAK           reduce using rule 7 (instruction -> print_i ; .)
    PRINT           reduce using rule 7 (instruction -> print_i ; .)
    WHILE           reduce using rule 7 (instruction -> print_i ; .)
    FOR             reduce using rule 7 (instruction -> print_i ; .)
    RETURN          reduce using rule 7 (instruction -> print_i ; .)
    IF              reduce using rule 7 (instruction -> print_i ; .)
    ID              reduce using rule 7 (instruction -> print_i ; .)
    $end            reduce using rule 7 (instruction -> print_i ; .)
    }               reduce using rule 7 (instruction -> print_i ; .)
    ELSE            reduce using rule 7 (instruction -> print_i ; .)


state 25

    (8) instruction -> assign ; .
    {               reduce using rule 8 (instruction -> assign ; .)
    CONTINUE        reduce using rule 8 (instruction -> assign ; .)
    BREAK           reduce using rule 8 (instruction -> assign ; .)
    PRINT           reduce using rule 8 (instruction -> assign ; .)
    WHILE           reduce using rule 8 (instruction -> assign ; .)
    FOR             reduce using rule 8 (instruction -> assign ; .)
    RETURN          reduce using rule 8 (instruction -> assign ; .)
    IF              reduce using rule 8 (instruction -> assign ; .)
    ID              reduce using rule 8 (instruction -> assign ; .)
    $end            reduce using rule 8 (instruction -> assign ; .)
    }               reduce using rule 8 (instruction -> assign ; .)
    ELSE            reduce using rule 8 (instruction -> assign ; .)


state 26

    (11) instruction -> CONTINUE ; .
    {               reduce using rule 11 (instruction -> CONTINUE ; .)
    CONTINUE        reduce using rule 11 (instruction -> CONTINUE ; .)
    BREAK           reduce using rule 11 (instruction -> CONTINUE ; .)
    PRINT           reduce using rule 11 (instruction -> CONTINUE ; .)
    WHILE           reduce using rule 11 (instruction -> CONTINUE ; .)
    FOR             reduce using rule 11 (instruction -> CONTINUE ; .)
    RETURN          reduce using rule 11 (instruction -> CONTINUE ; .)
    IF              reduce using rule 11 (instruction -> CONTINUE ; .)
    ID              reduce using rule 11 (instruction -> CONTINUE ; .)
    $end            reduce using rule 11 (instruction -> CONTINUE ; .)
    }               reduce using rule 11 (instruction -> CONTINUE ; .)
    ELSE            reduce using rule 11 (instruction -> CONTINUE ; .)


state 27

    (12) instruction -> BREAK ; .
    {               reduce using rule 12 (instruction -> BREAK ; .)
    CONTINUE        reduce using rule 12 (instruction -> BREAK ; .)
    BREAK           reduce using rule 12 (instruction -> BREAK ; .)
    PRINT           reduce using rule 12 (instruction -> BREAK ; .)
    WHILE           reduce using rule 12 (instruction -> BREAK ; .)
    FOR             reduce using rule 12 (instruction -> BREAK ; .)
    RETURN          reduce using rule 12 (instruction -> BREAK ; .)
    IF              reduce using rule 12 (instruction -> BREAK ; .)
    ID              reduce using rule 12 (instruction -> BREAK ; .)
    $end            reduce using rule 12 (instruction -> BREAK ; .)
    }               reduce using rule 12 (instruction -> BREAK ; .)
    ELSE            reduce using rule 12 (instruction -> BREAK ; .)


state 28

    (13) instruction -> return_i ; .
    {               reduce using rule 13 (instruction -> return_i ; .)
    CONTINUE        reduce using rule 13 (instruction -> return_i ; .)
    BREAK           reduce using rule 13 (instruction -> return_i ; .)
    PRINT           reduce using rule 13 (instruction -> return_i ; .)
    WHILE           reduce using rule 13 (instruction -> return_i ; .)
    FOR             reduce using rule 13 (instruction -> return_i ; .)
    RETURN          reduce using rule 13 (instruction -> return_i ; .)
    IF              reduce using rule 13 (instruction -> return_i ; .)
    ID              reduce using rule 13 (instruction -> return_i ; .)
    $end            reduce using rule 13 (instruction -> return_i ; .)
    }               reduce using rule 13 (instruction -> return_i ; .)
    ELSE            reduce using rule 13 (instruction -> return_i ; .)


state 29

    (70) print_i -> PRINT printargs .
    ;               reduce using rule 70 (print_i -> PRINT printargs .)


state 30

    (71) printargs -> expr .
    (72) printargs -> expr . , printargs
    (17) expr -> expr . '
    (20) expr -> expr . OR expr
    (21) expr -> expr . AND expr
    (22) expr -> expr . XOR expr
    (23) expr -> expr . DOTSUB expr
    (24) expr -> expr . DOTADD expr
    (25) expr -> expr . DOTDIV expr
    (26) expr -> expr . DOTMUL expr
    (27) expr -> expr . LESSEREQUAL expr
    (28) expr -> expr . GREATEREQUAL expr
    (29) expr -> expr . LESSER expr
    (30) expr -> expr . GREATER expr
    (31) expr -> expr . NOTEQUAL expr
    (32) expr -> expr . EQUAL expr
    (33) expr -> expr . / expr
    (34) expr -> expr . * expr
    (35) expr -> expr . - expr
    (36) expr -> expr . + expr
    ;               reduce using rule 71 (printargs -> expr .)
    ,               shift and go to state 55
    '               shift and go to state 56
    OR              shift and go to state 57
    AND             shift and go to state 58
    XOR             shift and go to state 59
    DOTSUB          shift and go to state 60
    DOTADD          shift and go to state 61
    DOTDIV          shift and go to state 62
    DOTMUL          shift and go to state 63
    LESSEREQUAL     shift and go to state 64
    GREATEREQUAL    shift and go to state 65
    LESSER          shift and go to state 66
    GREATER         shift and go to state 67
    NOTEQUAL        shift and go to state 68
    EQUAL           shift and go to state 69
    /               shift and go to state 70
    *               shift and go to state 71
    -               shift and go to state 72
    +               shift and go to state 73


state 31

    (15) expr -> mat_fun . ( expr )
    (               shift and go to state 74


state 32
